# tracey

./: .gitignore  README.md  package-lock.json  renovate.json  shaw-test-result.txt  skills-lock.json
.github/agents/: copilot-instructions.md
.github/skills/tauri/: SKILL.md
.github/workflows/: ci.yml  release.yml  squad-triage.yml
.specify/memory/: constitution.md
.squad/: .first-run  ceremonies.md  config.json  decisions.md  routing.md  team.md  tmp-commit-msg.txt
.squad/agents/control/: charter.md  history.md
.squad/agents/finch/: charter.md  history.md
.squad/agents/fusco/: charter.md  history.md
.squad/agents/leon/: charter.md  history.md
.squad/agents/ralph/: charter.md  history.md
.squad/agents/reese/: charter.md  history.md
.squad/agents/root/: charter.md  history.md
.squad/agents/scribe/: charter.md  history.md
.squad/agents/shaw/: charter.md  history.md
.squad/agents/uxer/: charter.md  history.md
.squad/casting/: history.json  policy.json  registry.json
.squad/identity/: now.md  wisdom.md
.squad/orchestration-log/: 2026-03-16-reese-t032-t034.md  2026-03-16-root-t035-t036.md  2026-03-16-shaw-t031.md
.squad/templates/workflows/: squad-ci.yml  squad-docs.yml  squad-heartbeat.yml  squad-insider-release.yml  squad-issue-assign.yml  squad-label-enforce.yml  squad-preview.yml  squad-promote.yml  squad-release.yml  sync-squad-labels.yml
docs/superpowers/plans/: 2026-04-03-plan-a-ocr-pipeline.md  2026-04-03-plan-b-classification-engine.md  2026-04-03-plan-c-auto-entries-active-learning.md  2026-04-03-plan-d-classification-page.md  2026-04-03-plan-e-cross-device-sync.md
docs/superpowers/specs/: 2026-04-03-auto-classification-time-entries-design.md
docs/ux/: tone.md
specs/001-window-activity-tracker/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-window-activity-tracker/checklists/: requirements.md  ux.md
specs/001-window-activity-tracker/contracts/: ipc-commands.md  sync-api.md
src/: Tracey.slnx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/benches/: db_benchmarks.rs
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  tray.rs
src-tauri/src/commands/: activity.rs  classification.rs  data.rs  hierarchy.rs  idle.rs  mod.rs  screenshot.rs  sync.rs  timer.rs
src-tauri/src/db/: migrations.rs  mod.rs
src-tauri/src/db/migrations/: 001_initial_schema.sql  002_add_schema_migrations_table.sql  003_sync_queue_additions.sql  004_add_device_id_columns.sql  005_add_ocr_text_to_screenshots.sql  006_classification_engine.sql  007_auto_classification_loop.sql  008_logging_preferences.sql  009_minimize_to_tray.sql  010_theme_preference.sql  README.md
src-tauri/src/models/: mod.rs
src-tauri/src/platform/: mod.rs  windows.rs
src-tauri/src/services/: active_learning_queue.rs  activity_tracker.rs  classification_loop.rs  idle_service.rs  logger.rs  mod.rs  ocr_service.rs  screenshot_service.rs  sync_service.rs  timer_tick.rs
src-tauri/src/services/classification/: feature_extractor.rs  heuristic.rs  mod.rs  tfidf.rs  trainer.rs
src-tauri/tests/: portable_path.rs
src/Tracey.App/: App.razor  Program.cs  Tracey.App.csproj  _Imports.razor
src/Tracey.Tests/: ClassificationToastTests.cs  FuzzyMatchTests.cs  NotificationChannelTests.cs  TimerStateServiceTests.cs  Tracey.Tests.csproj
tests/e2e/: package-lock.json  package.json  playwright.config.ts  tsconfig.json
(+63 files in other folders)
