[package]
name = "tracey"
version = "0.1.0"
description = "Window Activity Timetracking Tool"
authors = ["Vincent Verweij"]
license = ""
repository = ""
default-run = "tracey"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "tracey_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
# tauri-plugin-system-idle — DOES NOT EXIST on crates.io; idle detection handled via Win32 in platform/windows.rs (T017b)
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
keyring = "3"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
image = { version = "0.25", default-features = false, features = ["jpeg"] }
log = "0.4"
env_logger = "0.11"
ulid = "1"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-uuid-1"] }
postgres-native-tls = "0.5"
native-tls = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_System_SystemInformation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_ProcessStatus",
  "Win32_System_Threading",
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Graphics_Imaging",
  "Media_Ocr",
  "Storage_Streams",
] }

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "db_benchmarks"
harness = false

[features]
# Default set of Tauri features
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
# Test feature enables GDI screenshot test doubles (used by Playwright E2E CI)
test = []
